--- a/index.html
+++ b/index.html
@@ -295,10 +295,12 @@
                         <div class="section-title">
                             <div class="col-md-8 offset-md-2 text-center">
                                 <h2 class="section-title__title">MÉTODO SEED<br/></h2>
-                                <h5 > Es un proceso diseñado para acompañar a los emprendedores desde la alineación 
-                                    de sus valores y propósito personal hasta la creación y optimización de su proyecto,
-                                     guiándolos paso a paso para transformar sus ideas en negocios reales y sostenibles 
-                                     con impacto.
+                                <h5>
+                                     Es un proceso diseñado para guiar a los emprendedores desde la alineación 
+                                     de sus valores y propósito personal hasta la creación y optimización de su 
+                                     proyecto. A través de un enfoque práctico, cada fase proporciona herramientas 
+                                     clave para tomar decisiones informadas y transformar ideas en negocios reales, 
+                                     sostenibles y con impacto.
                                 </h5>
                             </div>
                         </div><!-- section-title -->
@@ -740,16 +742,16 @@
                         />
                     </a><!-- /.footer-logo -->
                     <div class="main-footer__social">
-                        <a href="https://twitter.com/"><i class="fab fa-twitter"></i></a>
-                        <a href="https://www.facebook.com/"><i class="fab fa-facebook"></i></a>
-                        <a href="https://www.pinterest.com/"><i class="fab fa-pinterest-p"></i></a>
                         <a href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.linkedin.com/"><i class="fab fa-linkedin"></i></a>
+                        <a href="https://www.tiktok.com/"><i class="fab fa-tiktok"></i></a>
+                        <a href="https://www.youtube.com/"><i class="fab fa-youtube"></i></a>
                     </div><!-- /.footer-social -->
                 </div><!-- footer-top -->
                 <div class="row">
                     <div class="col-lg-8 col-md-6 wow fadeInUp animated" data-wow-delay="200ms">
                         <div class="main-footer__about">
-                            <p class="footer-widget__text">Impulsemos tu camino profesional</p>
+                            <p class="footer-widget__text">Forma parte de la próxima generación de talento</p>
                             <a href="mailto:info@phimistersbschool.com">info@phimistersbschool.com</a>
                         </div><!-- /.footer-widget -->
                     </div>
@@ -802,10 +804,10 @@
                 </li>
             </ul><!-- /.mobile-nav__contact -->
             <div class="mobile-nav__social">
-                <a href="https://twitter.com/"><i class="fab fa-twitter"></i></a>
-                <a href="https://www.facebook.com/"><i class="fab fa-facebook"></i></a>
-                <a href="https://www.pinterest.com/"><i class="fab fa-pinterest-p"></i></a>
                 <a href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a>
+                <a href="https://www.linkedin.com/"><i class="fab fa-linkedin"></i></a>
+                <a href="https://www.tiktok.com/"><i class="fab fa-tiktok"></i></a>
+                <a href="https://www.youtube.com/"><i class="fab fa-youtube"></i></a>
             </div><!-- /.mobile-nav__social -->
         </div>
         <!-- /.mobile-nav__content -->
