--- a/talent-asoc.html
+++ b/talent-asoc.html
@@ -52,7 +52,7 @@
                     <div class="main-menu__logo">
                         <a href="index.html">
                             <img
-                                src="assets/images/logo/phimister_logo.avif"
+                                src="assets/images/logo/asociaciontalento.png"
                                 width="200"
                                 height="90"
                                 alt="Phimister"
@@ -264,10 +264,10 @@
                         />
                     </a><!-- /.footer-logo -->
                     <div class="main-footer__social">
-                        <a href="https://twitter.com/"><i class="fab fa-twitter"></i></a>
-                        <a href="https://www.facebook.com/"><i class="fab fa-facebook"></i></a>
-                        <a href="https://www.pinterest.com/"><i class="fab fa-pinterest-p"></i></a>
                         <a href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.linkedin.com/"><i class="fab fa-linkedin"></i></a>
+                        <a href="https://www.tiktok.com/"><i class="fab fa-tiktok"></i></a>
+                        <a href="https://www.youtube.com/"><i class="fab fa-youtube"></i></a>
                     </div><!-- /.footer-social -->
                 </div><!-- footer-top -->
                 <div class="row">
@@ -326,10 +326,10 @@
                 </li>
             </ul><!-- /.mobile-nav__contact -->
             <div class="mobile-nav__social">
-                <a href="https://twitter.com/"><i class="fab fa-twitter"></i></a>
-                <a href="https://www.facebook.com/"><i class="fab fa-facebook"></i></a>
-                <a href="https://www.pinterest.com/"><i class="fab fa-pinterest-p"></i></a>
                 <a href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a>
+                <a href="https://www.linkedin.com/"><i class="fab fa-linkedin"></i></a>
+                <a href="https://www.tiktok.com/"><i class="fab fa-tiktok"></i></a>
+                <a href="https://www.youtube.com/"><i class="fab fa-youtube"></i></a>
             </div><!-- /.mobile-nav__social -->
         </div>
         <!-- /.mobile-nav__content -->
