--- a/talent-asoc.html
+++ b/talent-asoc.html
@@ -62,9 +62,9 @@
                     <div class="main-menu__nav">
                         <ul class="main-menu__list one-page-scroll-menu">
                             <li class="scrollToLink"><a href="index.html">Home</a></li>
-                            <li class="scrollToLink"><a href="program.html">Ediciones 2025</a></li>
-                            <li class="scrollToLink"><a href="talent-list.html">Talent list</a></li>
-                            <li class="scrollToLink"><a href="blog-grid.html">Blog</a></li>
+                            <!-- <li class="scrollToLink"><a href="program.html">Ediciones 2025</a></li> -->
+                            <!-- <li class="scrollToLink"><a href="talent-list.html">Talent list</a></li> -->
+                            <!-- <li class="scrollToLink"><a href="blog-grid.html">Blog</a></li> -->
                             <li class="scrollToLink"><a href="contact.html">Contacto</a></li>
                             <li class="scrollToLink"><a href="talent-asoc.html">Asociación para el talento</a></li>
                         </ul>
