--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                             <!-- about thumb start -->
                             <div class="about-one__thumb__round--top"></div>
                             <div class="about-one__thumb__img">
-                                <img src="assets/images/resources/about-1-2.jpg" alt="ogency">
+                                <img src="assets/images/resources/about-1-2.png" alt="ogency">
                             </div>
                             <div class="about-one__thumb__round--bottom"></div>
                         </div><!-- about thumb end -->
@@ -436,7 +436,7 @@
                     <div class="col-xl-2 col-md-4 col-sm-6 custom-width wow fadeInUp animated" data-wow-delay="100ms">
                         <div class="team-one__item">
                             <div class="team-one__item__image">
-                                <img src="assets/images/team/team-1-1.jpg" alt="ogency">
+                                <img src="assets/images/team/team-1-8.jpg" alt="ogency">
                             </div><!-- /.team-image -->
                             <div class="team-one__item__content">
                                 <span class="team-one__item__designation">Chief Project Officer</span><!-- /.team-designation -->
@@ -455,7 +455,7 @@
                     <div class="col-xl-2 col-md-4 col-sm-6 custom-width wow fadeInUp animated" data-wow-delay="100ms">
                         <div class="team-one__item">
                             <div class="team-one__item__image">
-                                <img src="assets/images/team/team-1-1.jpg" alt="ogency">
+                                <img src="assets/images/team/team-1-5.jpg" alt="ogency">
                             </div><!-- /.team-image -->
                             <div class="team-one__item__content">
                                 <span class="team-one__item__designation">Chief Marketing Officer</span><!-- /.team-designation -->
@@ -474,7 +474,7 @@
                     <div class="col-xl-2 col-md-4 col-sm-6 custom-width wow fadeInUp animated" data-wow-delay="100ms">
                         <div class="team-one__item">
                             <div class="team-one__item__image">
-                                <img src="assets/images/team/team-1-1.jpg" alt="ogency">
+                                <img src="assets/images/team/team-1-2.jpg" alt="ogency">
                             </div><!-- /.team-image -->
                             <div class="team-one__item__content">
                                 <span class="team-one__item__designation">Chief Learning Officer</span><!-- /.team-designation -->
@@ -493,7 +493,7 @@
                     <div class="col-xl-2 col-md-4 col-sm-6 custom-width wow fadeInUp animated" data-wow-delay="100ms">
                         <div class="team-one__item">
                             <div class="team-one__item__image">
-                                <img src="assets/images/team/team-1-1.jpg" alt="ogency">
+                                <img src="assets/images/team/team-1-7.jpg" alt="ogency">
                             </div><!-- /.team-image -->
                             <div class="team-one__item__content">
                                 <span class="team-one__item__designation">Mentor & English coach</span><!-- /.team-designation -->
@@ -512,7 +512,7 @@
                     <div class="col-xl-2 col-md-4 col-sm-6 custom-width wow fadeInUp animated" data-wow-delay="100ms">
                         <div class="team-one__item">
                             <div class="team-one__item__image">
-                                <img src="assets/images/team/team-1-1.jpg" alt="ogency">
+                                <img src="assets/images/team/team-1-6.jpg" alt="ogency">
                             </div><!-- /.team-image -->
                             <div class="team-one__item__content">
                                 <span class="team-one__item__designation">Digital marketing specialist</span><!-- /.team-designation -->
@@ -550,7 +550,7 @@
                     <div class="col-xl-2 col-md-4 col-sm-6 custom-width wow fadeInUp animated" data-wow-delay="100ms">
                         <div class="team-one__item">
                             <div class="team-one__item__image">
-                                <img src="assets/images/team/team-1-1.jpg" alt="ogency">
+                                <img src="assets/images/team/team-1-4.jpg" alt="ogency">
                             </div><!-- /.team-image -->
                             <div class="team-one__item__content">
                                 <span class="team-one__item__designation">Coach y asesora financiera</span><!-- /.team-designation -->
@@ -680,9 +680,9 @@
                 <div class="row justify-content-center">
                     <div class="col-xl-4">
                         <div class="team-one__item">
-                            <div class="team-one__item__image">
-                                <img src="assets/images/team/team-1-1.jpg" alt="ogency">
-                            </div><!-- /.team-image -->
+                            <div class="team-one__item__image custom-box">
+                                <span>Always </br>ready to...</span>
+                            </div>
                         </div><!-- /.team-one -->
                     </div>
                     <div class="col-xl-8">
