--- a/talent-asoc.html
+++ b/talent-asoc.html
@@ -65,7 +65,7 @@
                             <!-- <li class="scrollToLink"><a href="program.html">Ediciones 2025</a></li> -->
                             <!-- <li class="scrollToLink"><a href="talent-list.html">Talent list</a></li> -->
                             <!-- <li class="scrollToLink"><a href="blog-grid.html">Blog</a></li> -->
-                            <li class="scrollToLink"><a href="talent-asoc.html">Asociación para el talento</a></li>
+                            <li class="scrollToLink"><a href="talent-asoc.html">Asociación para el Talento</a></li>
                             <li class="scrollToLink"><a href="contact.html">Contacto</a></li>
                         </ul>
                     </div><!-- /.main-menu__nav -->
@@ -86,44 +86,63 @@
                 <h2 class="page-header__title">Asociación para el talento</h2><!-- /.page-title -->
             </div><!-- /.container -->
         </section><!-- /.page-header -->
-        <!-- About Start -->
-        <section class="about-three">
+
+        <!-- Problem start -->
+        <section class="about-one">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-6">
-                        <div class="about-three__thumb">
+                        <div class="about-one__thumb wow fadeInLeft animated" data-wow-delay="300ms">
                             <!-- about thumb start -->
-                            <div class="about-three__thumb--one wow fadeInLeft animated" data-wow-delay="300ms">
-                                <img src="assets/images/backgrounds/slider-1-shape-2.jpg" alt="ogency">
+                            <div class="about-one__thumb__round--top"></div>
+                            <div class="about-one__thumb__img">
+                                <img src="assets/images/resources/about-1-1.jpg" alt="ogency">
                             </div>
-                            <div class="about-three__thumb--two wow fadeInLeft animated" data-wow-delay="200ms">
-                                <img src="assets/images/resources/about-3-2.jpg" alt="ogency">
-                            </div>
+                            <div class="about-one__thumb__round--bottom"></div>
                         </div><!-- about thumb end -->
                     </div>
                     <div class="col-lg-6">
-                        <div class="about-three__content">
+                        <div class="about-one__content">
                             <!-- about content start-->
                             <div class="section-title">
-                                <h5 class="section-title__tagline section-title__tagline--has-dots">Sobre el programa</h5>
-                                <h2 class="section-title__title">¡Conoce el programa!</h2>
+                                <h5 class="section-title__tagline section-title__tagline--has-dots"></h5>
+                                <h2 class="section-title__title">Sobre el programa</h2>
                             </div><!-- section-title -->
-                            <h4 class="about-three__content__heading">Estas a un paso de empezar.</h4>
-                            <p class="about-three__content__text">
-                                There are many variations of simply free text passages of available but the majority have suffered alteration in some form,
-                                by injected hum randomised words which don't slightly.
-                            </p>
-                            <div class="about-three__author">
-                                <div class="about-three__author__thumb"><img src="assets/images/resources/about-3-3.jpg" alt="ogency"></div>
-                                <!-- <img src="assets/images/resources/about-sign.png" alt="ogency" width="223"> -->
-                                <p class="about-three__author__meta">Michales - Co Founder</p>
-                            </div>
+                            <p class="about-one__content__text-one">La tasa de desempleo juvenil en España alcanza el 30%, el doble que la media europea. A esto se suma una preocupante tasa de emprendimiento juvenil, que apenas llega al 6%, muy por debajo de países como Reino Unido o Países Bajos. Además, en el último año, Cataluña ha perdido más de 120.000 personas debido a la fuga de talento.</p></br>
                         </div><!-- about content end-->
                     </div>
                 </div>
             </div>
         </section>
-        <!-- About End -->
+        <!-- Problem End -->
+
+        <!-- Solution Start -->
+        <section class="about-one">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-6">
+                        <div class="about-one__content">
+                            <!-- about content start-->
+                            <div class="section-title">
+                                <h2 class="section-title__title">¿La solución?</h2>
+                            </div><!-- section-title -->
+                            <p class="about-one__content__text-one">Para hacer frente a esta situación, nace Asociación para el Talento, un puente entre jóvenes con formación en soft skills y las entidades que buscan incorporar ese talento. Nuestra misión es ser un actor clave en el ecosistema empresarial, captando y formando talento joven, con el objetivo de mejorar su empleabilidad o fomentar la autoocupación.</p>
+                        </div><!-- about content end-->
+                    </div>
+                    <div class="col-lg-6">
+                        <div class="about-one__thumb wow fadeInLeft animated" data-wow-delay="300ms">
+                            <!-- about thumb start -->
+                            <div class="about-one__thumb__round--top"></div>
+                            <div class="about-one__thumb__img">
+                                <img src="assets/images/backgrounds/slider-1-shape-2.jpg" alt="ogency">
+                            </div>
+                            <div class="about-one__thumb__round--bottom"></div>
+                        </div><!-- about thumb end -->
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Solution End -->
 
         <!--Testimonial Start-->
         <section class="testimonial-three">
@@ -253,9 +272,9 @@
                 <div class="main-footer__top wow fadeInUp animated" data-wow-delay="100ms">
                     <a href="index.html" class="main-footer__logo">
                         <img
-                            src="assets/images/logo/phimister_logo.avif"
-                            width="262"
-                            height="112"
+                            src="assets/images/logo/phimister_logo.png"
+                            width="180"
+                            height="85"
                             alt="Phimister"
                         />
                     </a><!-- /.footer-logo -->
@@ -276,10 +295,8 @@
                     <div class="col-lg-2 col-md-3 wow fadeInUp animated" data-wow-delay="300ms">
                         <div class="main-footer__navmenu">
                             <ul>
-                                <li><a href="about.html">Sobre nosotros</a></li>
-                                <li><a href="team.html">Conoce al equipo</a></li>
-                                <li><a href="blog-grid-right.html">Blog</a></li>
-                                <li><a href="projects.html">Nuestros programas</a></li>
+                                <li><a href="index.html">Home</a></li>
+                                <li><a href="talent-asoc.html">Asociación para el talento</a></li>
                                 <li><a href="contact.html">Contacto</a></li>
                             </ul><!-- /.list-unstyled -->
                         </div><!-- /.footer-widget -->
