--- a/contact.html
+++ b/contact.html
@@ -52,9 +52,9 @@
                     <div class="main-menu__logo">
                         <a href="index.html">
                             <img
-                                src="assets/images/logo/phimister_logo.avif"
-                                width="200"
-                                height="90"
+                                src="assets/images/logo/phimister_logo.png"
+                                width="180"
+                                height="85"
                                 alt="Phimister"
                             />
                         </a>
@@ -65,7 +65,7 @@
                             <!-- <li class="scrollToLink"><a href="program.html">Ediciones 2025</a></li> -->
                             <!-- <li class="scrollToLink"><a href="talent-list.html">Talent list</a></li> -->
                             <!-- <li class="scrollToLink"><a href="blog-grid.html">Blog</a></li> -->
-                            <li class="scrollToLink"><a href="talent-asoc.html">Asociación para el talento</a></li>
+                            <li class="scrollToLink"><a href="talent-asoc.html">Asociación para el Talento</a></li>
                             <li class="scrollToLink"><a href="contact.html">Contacto</a></li>
                         </ul>
                     </div><!-- /.main-menu__nav -->
@@ -188,9 +188,9 @@
                 <div class="main-footer__top wow fadeInUp animated" data-wow-delay="100ms">
                     <a href="index.html" class="main-footer__logo">
                         <img
-                            src="assets/images/logo/phimister_logo.avif"
-                            width="262"
-                            height="112"
+                            src="assets/images/logo/phimister_logo.png"
+                            width="180"
+                            height="85"
                             alt="Phimister"
                         />
                     </a><!-- /.footer-logo -->
@@ -211,10 +211,8 @@
                     <div class="col-lg-2 col-md-3 wow fadeInUp animated" data-wow-delay="300ms">
                         <div class="main-footer__navmenu">
                             <ul>
-                                <li><a href="about.html">Sobre nosotros</a></li>
-                                <li><a href="team.html">Conoce al equipo</a></li>
-                                <li><a href="blog-grid-right.html">Blog</a></li>
-                                <li><a href="projects.html">Nuestros programas</a></li>
+                                <li><a href="index.html">Home</a></li>
+                                <li><a href="talent-asoc.html">Asociación para el talento</a></li>
                                 <li><a href="contact.html">Contacto</a></li>
                             </ul><!-- /.list-unstyled -->
                         </div><!-- /.footer-widget -->
