--- a/talent-asoc.html
+++ b/talent-asoc.html
@@ -96,7 +96,10 @@
                             <!-- about thumb start -->
                             <div class="about-one__thumb__round--top"></div>
                             <div class="about-one__thumb__img">
-                                <img src="assets/images/resources/about-1-1.jpg" alt="ogency">
+                                <img src="assets/images/resources/about-1-3.jpg" 
+                                width="700"
+                                height="400"
+                                alt="ogency">
                             </div>
                             <div class="about-one__thumb__round--bottom"></div>
                         </div><!-- about thumb end -->
@@ -134,7 +137,10 @@
                             <!-- about thumb start -->
                             <div class="about-one__thumb__round--top"></div>
                             <div class="about-one__thumb__img">
-                                <img src="assets/images/backgrounds/slider-1-shape-2.jpg" alt="ogency">
+                                <img src="assets/images/resources/about-1-4.jpg" 
+                                width="800"
+                                height="400"
+                                alt="ogency">
                             </div>
                             <div class="about-one__thumb__round--bottom"></div>
                         </div><!-- about thumb end -->
@@ -148,7 +154,7 @@
         <section class="testimonial-three">
             <div class="container">
                 <div class="section-title">
-                    <h5 class="section-title__tagline section-title__tagline--has-dots">La red alumni</h5>
+                    <h5 class="section-title__tagline section-title__tagline--has-dots">Opiniones</h5>
                     <h2 class="section-title__title">Las opiniones de partners</h2>
                 </div><!-- section-title -->
                 <div class="testimonial-three__carousel ogency-owl__carousel owl-theme owl-carousel" data-owl-options='{
@@ -173,7 +179,7 @@
                     <!-- Testimonial Item -->
                     <div class="testimonial-three__item">
                         <div class="testimonial-three__item__border"></div><!-- border -->
-                        <h3 class="testimonial-three__item__name">Donald hardson</h3><!-- testimonial-name -->
+                        <h3 class="testimonial-three__item__name">Partner 1</h3><!-- testimonial-name -->
                         <div class="testimonial-three__item__quote">
                             Leverage agile frameworks to provide a robust synopsis for high level overviews.
                             Iterative approaches to corporate strategy data foster to collaborative thinking.
@@ -189,14 +195,13 @@
                                 <span class="fa fa-star"></span>
                                 <span class="fa fa-star"></span>
                             </div><!-- testimonial-ratings-icon -->
-                            <div class="testimonial-three__item__meta__reviews">4.9 Reviews</div><!-- testimonial-ratings-reviwes -->
                         </div><!-- testimonial-meta -->
                     </div>
                     <!-- Testimonial Item -->
                     <!-- Testimonial Item -->
                     <div class="testimonial-three__item">
                         <div class="testimonial-three__item__border"></div><!-- border -->
-                        <h3 class="testimonial-three__item__name">Aleesha brown</h3><!-- testimonial-name -->
+                        <h3 class="testimonial-three__item__name">Partner 2</h3><!-- testimonial-name -->
                         <div class="testimonial-three__item__quote">
                             Leverage agile frameworks to provide a robust synopsis for high level overviews.
                             Iterative approaches to corporate strategy data foster to collaborative thinking.
@@ -212,14 +217,13 @@
                                 <span class="fa fa-star"></span>
                                 <span class="fa fa-star"></span>
                             </div><!-- testimonial-ratings-icon -->
-                            <div class="testimonial-three__item__meta__reviews">4.9 Reviews</div><!-- testimonial-ratings-reviwes -->
                         </div><!-- testimonial-meta -->
                     </div>
                     <!-- Testimonial Item -->
                     <!-- Testimonial Item -->
                     <div class="testimonial-three__item">
                         <div class="testimonial-three__item__border"></div><!-- border -->
-                        <h3 class="testimonial-three__item__name">Donald hardson</h3><!-- testimonial-name -->
+                        <h3 class="testimonial-three__item__name">Partner 3</h3><!-- testimonial-name -->
                         <div class="testimonial-three__item__quote">
                             Leverage agile frameworks to provide a robust synopsis for high level overviews.
                             Iterative approaches to corporate strategy data foster to collaborative thinking.
@@ -235,14 +239,13 @@
                                 <span class="fa fa-star"></span>
                                 <span class="fa fa-star"></span>
                             </div><!-- testimonial-ratings-icon -->
-                            <div class="testimonial-three__item__meta__reviews">4.9 Reviews</div><!-- testimonial-ratings-reviwes -->
                         </div><!-- testimonial-meta -->
                     </div>
                     <!-- Testimonial Item -->
                     <!-- Testimonial Item -->
                     <div class="testimonial-three__item">
                         <div class="testimonial-three__item__border"></div><!-- border -->
-                        <h3 class="testimonial-three__item__name">Aleesha brown</h3><!-- testimonial-name -->
+                        <h3 class="testimonial-three__item__name">Partner 4</h3><!-- testimonial-name -->
                         <div class="testimonial-three__item__quote">
                             Leverage agile frameworks to provide a robust synopsis for high level overviews.
                             Iterative approaches to corporate strategy data foster to collaborative thinking.
@@ -258,7 +261,6 @@
                                 <span class="fa fa-star"></span>
                                 <span class="fa fa-star"></span>
                             </div><!-- testimonial-ratings-icon -->
-                            <div class="testimonial-three__item__meta__reviews">4.9 Reviews</div><!-- testimonial-ratings-reviwes -->
                         </div><!-- testimonial-meta -->
                     </div>
                     <!-- Testimonial Item -->
